@@ -29,7 +29,7 @@
                     class="${solr.directoryFactory:solr.NRTCachingDirectoryFactory}"/>
 
   <xi:include href="./solrconfig.snippet.randomindexconfig.xml" xmlns:xi="http://www.w3.org/2001/XInclude"/>
-
+  <codecFactory class="solr.SchemaCodecFactory"/>
   <jmx/>
   <updateHandler class="solr.DirectUpdateHandler2">
     <!--updateLog>
